Updated Visual queus to the search banner. Search type does not float on smaller screens. Side banner not showing organization filter on scrolling fixed.

--- a/code/css/Mainstyle.css
+++ b/code/css/Mainstyle.css
@@ -58,7 +58,7 @@ body
   margin-top: 45px;
   float: left;
   width: 20%;
-  height: 100%;
+  //height: 100%;
   border-radius: 0px;
   color: #09677e;
   background-color: #ededed;
@@ -153,7 +153,6 @@ body
 
 #src_in_top {
   color: white;
-  width: 180px;
   height: 70%;
   float: left;
   background-color: #09677e;
